--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "prefer-stable": true,
     "require": {
         "php": "^5.3 | ^7.0",
-        "dhii/iterator-interface": "dev-release/0.1"
+        "dhii/iterator-interface": "dev-release/0.1",
+        "dhii/data-container-interface": "^0.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
