--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "require": {
         "php": "^5.3 | ^7.0",
         "dhii/iterator-interface": "dev-release/0.1",
-        "dhii/data-container-interface": "^0.1"
+        "dhii/data-container-interface": "^0.1",
+        "dhii/exception-interface": "dev-release/0.1"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8",
